refs #25354 - roles for clubs working. needs automated tests, also abilities definitions.

--- a/app/views/admin/agents/_form.html.erb
+++ b/app/views/admin/agents/_form.html.erb
@@ -45,7 +45,7 @@
           <%= f.fields_for :club_roles, @agent.club_roles do |role| %>
             <tr>
               <td><%= role.object.role %></td>
-              <td><%= role.object.club_id %></td>
+              <td><%= role.object.club_id %> <%= role.object.club.name %></td>
               <td>Delete &nbsp;<%= role.check_box '_destroy' %></td>
             </tr>
           <% end %>
