--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
   <div class="page-header">
     <h1>Search</h1>
     <% if can? :create, Product %>
-      <%= link_to(new_product_path, :class => "btn btn-primary btn_on_header") do %> 
+      <%= link_to(new_product_path, :class => "btn btn-primary btn_on_header", :id => "new_product") do %> 
         <i class="icon-plus"></i> New Product
       <% end %>
     <% end %>
