remove pardot div from member show

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -182,7 +182,7 @@
   </tbody>
 </table>
 
-<%= render :partial => 'pardot_sync' %>
+<%#= render :partial => 'pardot_sync' %>
 
 <table id="table_membership_information" class="table table-bordered table-condensed table-nohover">
   <thead>
