ref#25478-Removed number_to_currency from toms's club cash amount on tom's show page.

--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -17,7 +17,7 @@
     <td> <%= t('activerecord.attributes.terms_of_membership.provisional_days') %>: 
          <%= @tom.provisional_days %> </td>    
     <td> <%= t('activerecord.attributes.terms_of_membership.club_cash_amount') %>: 
-         <%= number_to_currency(@tom.club_cash_amount) %> </tr>
+         <%= @tom.club_cash_amount %> </tr>
   </tr>
   <tr>
     <td colspan="5" class="comment"> <%= t('activerecord.attributes.terms_of_membership.description') %>: 
