--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -46,6 +46,11 @@
             <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm", :disabled => (cannot? :activate, CreditCard) %>
           <% end %>
         <% end %>
+        <% if @current_member.lapsed? and not @current_member.blacklisted and not cc.active %>
+          <%= link_to(I18n.t(:destroy), credit_card_path(@current_partner.prefix, @current_club.name, @current_member.visible_id, cc.id), :method => :delete, :id => "destroy",
+                        :confirm => I18n.t("are_you_sure"),
+                        :class => 'btn btn-mini btn-danger') %>
+        <% end %>
       </td>
     </tr>
   </tbody>
