ref#23903-fixed cancel button trnaslation on refund page.

--- a/app/views/members/refund.html.erb
+++ b/app/views/members/refund.html.erb
@@ -13,7 +13,7 @@
     <tr>
       <td>  <%= submit_tag t('buttons.refund_member'), :class => 'btn btn-primary' %>
       		  <%= link_to t('buttons.full_save'), member_full_save_path , :class=> 'btn btn-success' %>
-            <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
+            <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
