refs #25462 - declines strategy search fixed. installment type must be equal than we have at TOM db. cc_type in transaction model MUST be stored not calculated on each model load.

--- a/app/views/notifier/decline_strategy_not_found.rhtml
+++ b/app/views/notifier/decline_strategy_not_found.rhtml
@@ -2,7 +2,7 @@ Message: <%= @message %>
 
 Membership_id: <%= @transaction.id %>
 Member: <%= @transaction.member.uuid %>
-CC type: <%= @transaction.credit_card_type %>
+CC type: <%= @transaction.cc_type %>
 Campaign type: <%= @transaction.transaction_type %>
 
 We have scheduled this billing to be run in 30 days. 
