--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -7,19 +7,17 @@
 <%= form_tag(fulfillments_index_path) do %>
   <table class="table table-bordered" id ="fulfillments_table">
   	<tr>
-  		<td>
+      <td>
+        <%= label :all_times, t('all_times'), :class => 'help-inline' %>
+        <%= check_box_tag :all_times, params[:all_times] %> 
+      </td>
+  		<td id="td_initial_date">
 	  		<%= label :initial_date, t('initial_date'), :class => 'help-inline' %>
-	  	  <%= text_field :initial_date, nil ,:class => 'datepicker input-medium', :readonly => 'readonly',
-                       :value => (params[:initial_date].first if params[:initial_date]) %> 
+	  	  <%= text_field_tag :initial_date, params[:initial_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
   		</td>
-  		<td>
+  		<td id="td_end_date">
 	  		<%= label :end_date, t('end_date'), :class => 'help-inline' %>
-	  	  <%= text_field :end_date, nil ,:class => 'datepicker input-medium', :readonly => 'readonly',
-                       :value => (params[:end_date].first if params[:end_date]) %> 
-  		</td>
-  		<td>
-	  		<%= label :all_times, t('all_times'), :class => 'help-inline' %>
-	  	  <%= check_box nil, :all_times, :checked => (true if params[:all_times]=='1') %> 
+	  	  <%= text_field_tag :end_date, params[:end_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
   		</td>
   		<td>
         <%= label :status, t('activerecord.attributes.fulfillment.status'), :class => 'help-inline' %>
