--- a/app/views/shared/_breadcrumb.html.erb
+++ b/app/views/shared/_breadcrumb.html.erb
@@ -4,7 +4,7 @@
     <li>
       <a href="<%= root_path %>">Home</a>
     </li>
-    <% if @current_partner %>
+    <% if @current_partner and can? :read, Partner %>
       <li>
         <%= delimiter %>Partner
       </li>
@@ -12,7 +12,7 @@
         <%= delimiter %><a href="<%= admin_partner_dashboard_path(@current_partner.prefix) %>"><%= @current_partner.name %></a>
       </li>
     <% end %>
-    <% if @current_club %>
+    <% if @current_club and can? :read ,Club %>
       <li>
         <%= delimiter %>Club
       </li>
