--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -9,7 +9,7 @@
   	<tr>
       <td>
         <%= label :all_times, t('all_times'), :class => 'help-inline' %>
-        <%= check_box_tag :all_times, params[:all_times] %> 
+        <%= check_box_tag :all_times, 1, params[:all_times] %> 
       </td>
   		<td id="td_initial_date">
 	  		<%= label :initial_date, t('initial_date'), :class => 'help-inline' %>
@@ -45,7 +45,7 @@
 <%= render :partial => "report_result" %>
 
 <script type="text/javascript">
-  $(document).ready( fulfillments_index_functions('<%= generate_xls_fulfillments_path %>') );
+  $(document).ready( fulfillments_index_functions('<%= generate_xls_fulfillments_path %>', '<%= fulfillments_index_path %>') );
 </script>
 
 
