--- a/app/views/members/_memberships.html.erb
+++ b/app/views/members/_memberships.html.erb
@@ -1,7 +1,7 @@
 <table id="memberships_table" class="table table-bordered table-condensed dataTable" data-source="<%= memberships_url(format: "json") %>">
   <thead>
     <tr>
-      <th> <%= t('activerecord.attributes.membership.id') %> </th>
+      <th id="th_id"> <%= t('activerecord.attributes.membership.id') %> </th>
       <th> <%= t('activerecord.attributes.membership.status') %> </th>
       <th> <%= t('activerecord.attributes.membership.tom') %> </th>
       <th> <%= t('activerecord.attributes.membership.join_date') %> </th>
