--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -150,7 +150,7 @@
     <tr class="box_title">
       <th><h4>Active Credit Card</h4></th>
       <td style="border: none; text-align: right;">
-        <%= link_to(new_credit_card_path, :class => "btn btn-success", :disabled => (cannot? :create, CreditCard)) do %> 
+        <%= link_to(new_credit_card_path, :class => "btn btn-success", :disabled => (cannot? :create, CreditCard), :id => "add_credit_card") do %> 
           <i class="icon-plus"></i> Add a credit card
         <% end %>
       </td>
