--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -71,7 +71,7 @@
 
     <div class="row-fluid" style="margin-top: 8px;">
       <div class="span4">
-        <% if @current_member.can_recover? %>
+        <% if @current_member.can_recover? and can? :recover, Member %>
           <%= link_to "Recover", member_recover_path, :class => "btn btn-success btn-large-w", :id => 'recovery' %>
         <% else %>
           <%= link_to "Recover", "#", :class => "btn btn-large-w", :disabled => true, :id => 'recovery' %>
