--- a/app/views/credit_cards/_form.html.erb
+++ b/app/views/credit_cards/_form.html.erb
@@ -4,8 +4,7 @@
       <%= f.label :number, t('activerecord.credit_card')+' '+t('activerecord.attributes.credit_card.number'), :class => 'help-inline' %> 
       <%= f.text_field :number, :class => 'text_field input-medium'%> 
     <td> 
-      <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' 
-      %> 
+      <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
       <%= f.text_field :expire_month, :class => 'text_field input-small'%>
       <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
       <%= f.text_field :expire_year, :class => 'text_field input-small' %>
