ref#23923-moved 'full save' button to save the sale, from refund

--- a/app/views/members/save_the_sale.html.erb
+++ b/app/views/members/save_the_sale.html.erb
@@ -15,7 +15,8 @@
     </tr>
     <tr>
       <td> <%= submit_tag t('buttons.save_te_sale'), :class => 'btn btn-primary', :confirm => t('are_you_sure') %>
-           <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
+        <%= link_to t('buttons.full_save'), member_full_save_path , :class=> 'btn btn-success' %> 
+        <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
