--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -174,8 +174,8 @@
       <th> <%= t('activerecord.attributes.credit_card.added_at') %> </th>
       <th> <%= t('activerecord.attributes.credit_card.last_successful_bill_date') %> </th>
     </tr>
-    <tr class="<%= (@active_credit_card.am_card.expired? ? "card_expired" : "") %>">
-      <% if @active_credit_card %>
+    <% if @active_credit_card %>
+      <tr class="<%= (@active_credit_card.expired? ? "card_expired" : "") %>">
         <td>
           <%= @active_credit_card.last_digits %>
           (<%= @active_credit_card.cc_type.nil? ?  t('activerecord.attributes.credit_card.type_unknown') : @active_credit_card.cc_type %>)
