--- a/app/views/members/_search.html.erb
+++ b/app/views/members/_search.html.erb
@@ -3,7 +3,7 @@
 <table class="table table-bordered table-condensed">
   <thead>
   	<tr>
-      <th style="width: 100px;"> <%= t('activerecord.attributes.member.status') %> </th>
+      <th style="width: 110px;"> <%= t('activerecord.attributes.member.status') %> </th>
       <th> <%= t('activerecord.attributes.member.visible_id') %> </th>
       <% if @current_club.requires_external_id %>
         <th> <%= t('activerecord.attributes.member.external_id') %> </th>
@@ -20,7 +20,11 @@
     <% @members.each do |member| %>
     <tr class= "<%= cycle("odd", "even", :name => "row_class") -%>" > 
       <td class="<%= menber_status_class(member) %>"> 
+      <% if member.blacklisted? %>
+      <%= t('activerecord.attributes.member.status_blacklisted') %>
+      <% else %>
       <%= member.status %>
+      <% end %>
       </td>
       <td> <%= member.visible_id %> </td>
       <% if @current_club.requires_external_id %>
