--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -321,6 +321,7 @@
   <li><a href="#notes" data-toggle="tab">Notes</a></li>
   <li><a href="#credit_cards" data-toggle="tab">Credit Cards</a></li>
   <li><a href="#transactions" data-toggle="tab">Transactions</a></li>
+  <li><a href="#club_cash_transactions" data-toggle="tab">ClubCashTransactions</a></li>
   <li><a href="#fulfillments" data-toggle="tab">Fulfillments</a></li>
   <li><a href="#communication" data-toggle="tab">Communications</a></li>
   <% if @current_member.api_member and can? :see_sync_status, Member %>
@@ -348,6 +349,11 @@
   <div class="tab-pane" id="transactions">
     <div class="tab_body_padding">
       <%= render :partial => 'transactions' %>
+    </div>
+  </div>
+  <div class="tab-pane" id="club_cash_transactions">
+    <div class="tab_body_padding">
+      <%= render :partial => 'club_cash_transactions' %>
     </div>
   </div>
   <div class="tab-pane" id="fulfillments">
