ref#18758- fixed enrollment integration tests.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -181,8 +181,8 @@
           (<%= @active_credit_card.cc_type.nil? ?  t('activerecord.attributes.credit_card.type_unknown') : @active_credit_card.cc_type %>)
         </td>
         <td><%= @active_credit_card.expire_month %> / <%= @active_credit_card.expire_year %></td>
-        <td> <%= I18n.l @active_credit_card.created_at, :format => :only_date %></td>
-        <td> <%= I18n.l @active_credit_card.last_successful_bill_date, :format => :only_date if !@active_credit_card.last_successful_bill_date.nil? %> </td>
+        <td id="td_mi_credit_cards_first_created_at"> <%= I18n.l @active_credit_card.created_at, :format => :only_date %></td>
+        <td id="td_mi_last_successful_bill_date"> <%= I18n.l @active_credit_card.last_successful_bill_date, :format => :only_date if !@active_credit_card.last_successful_bill_date.nil? %> </td>
       <% end %>
 
     </tr>
