--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -66,7 +66,7 @@
         <% disable_cancel = @current_member.can_be_canceled? == false %>
         <%= link_to("Cancel", (!disable_cancel ? member_cancel_path : "#"), :class => "btn  btn-large-w #{(disable_cancel ? "disabled" : "btn-danger")}", :disabled => (cannot? :cancel, Member) , :id => 'cancel') %>
       </div>
-      <div class="span4">&nbsp</div>
+      <div class="span4">&nbsp;</div>
     </div>  
 
     <div class="row-fluid" style="margin-top: 8px;">
