--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -309,7 +309,7 @@
   <li><a href="#notes" data-toggle="tab">Notes</a></li>
   <li><a href="#credit_cards" data-toggle="tab">Credit Cards</a></li>
   <li><a href="#transactions" data-toggle="tab">Transactions</a></li>
-  <li><a href="#club_cash_transactions" data-toggle="tab">ClubCashTransactions</a></li>
+  <li><a href="#club_cash_transactions" data-toggle="tab">Club Cash</a></li>
   <li><a href="#fulfillments" data-toggle="tab">Fulfillments</a></li>
   <li><a href="#communication" data-toggle="tab">Communications</a></li>
   <% if @current_member.api_member and can? :see_sync_status, Member %>
