refs #25600 - sync buttons should be large only if they are at the top of the page

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -90,10 +90,10 @@
 
     <div class="row-fluid" style="margin-top: 8px;">
       <div class="span4">
-        <%= render :partial => 'shared/resend_welcome_email_button' %>
+        <%= render :partial => 'shared/resend_welcome_email_button', :locals => { use_large_button: true } %>
       </div>
       <div class="span4">
-        <%= render :partial => 'shared/reset_password_button' %>
+        <%= render :partial => 'shared/reset_password_button', :locals => { use_large_button: true } %>
       </div>
     </div>
 </div>
