--- a/app/views/members/_sync_status.html.erb
+++ b/app/views/members/_sync_status.html.erb
@@ -21,7 +21,7 @@
         <% end %>
       <% end %>
       
-      <%= render :partial => 'shared/resend_welcome_email_button' %>
+      <%= render :partial => 'shared/resend_welcome_email_button', :locals => { use_large_button: false } %>
 
       <% if @current_member.lapsed? || !@current_member.api_member %>
         <%= 
@@ -44,7 +44,7 @@
         <% end %>
       <% end %>
       
-      <%= render :partial => 'shared/reset_password_button' %>
+      <%= render :partial => 'shared/reset_password_button', :locals => { use_large_button: false } %>
 
       <% if @current_member.lapsed? || !@current_member.api_member || @current_member.api_id.blank? %>
         <%= 
