--- a/app/views/shared/_resend_welcome_email_button.html.erb
+++ b/app/views/shared/_resend_welcome_email_button.html.erb
@@ -1,8 +1,9 @@
+<% large_button = ( use_large_button ? "btn-large-w" : "") %>
 <% if @current_member.lapsed? || !@current_member.api_member || @current_member.api_id.blank? %>
   <%= 
     link_to member_resend_welcome_path(@current_partner.prefix, @current_club.name, @current_member.visible_id), 
       method: :post, 
-      class: "btn btn-info btn-large-w disabled",
+      class: "btn btn-info #{large_button} disabled",
       id: "resend_welcome_email" do %>
     <i class='icon-envelope'></i>
     <%= t('buttons.resend_welcome_email') %>
@@ -11,7 +12,7 @@
   <%= 
     link_to member_resend_welcome_path(@current_partner.prefix, @current_club.name, @current_member.visible_id), 
       method: :post, 
-      class: "btn btn-large-w btn-info",
+      class: "btn #{large_button} btn-info",
       id: "resend_welcome_email", 
       confirm: 'Are you sure?' do %>
     <i class='icon-envelope'></i>
