--- a/app/views/shared/_reset_password_button.html.erb
+++ b/app/views/shared/_reset_password_button.html.erb
@@ -1,9 +1,10 @@
+<% large_button = ( use_large_button ? "btn-large-w" : "") %>
 <% if @current_member.lapsed? || !@current_member.api_member || @current_member.api_id.blank? %>
   <%= 
     link_to "#", 
       method: :post,
       id: "password_reset",
-      class: "btn btn-warning btn-large-w disabled" do %>
+      class: "btn btn-warning #{large_button} disabled" do %>
     <i class='icon-key'></i>
     <%= t('buttons.password_reset') %>
   <% end %>
@@ -11,7 +12,7 @@
   <%= 
     link_to member_reset_password_path(@current_partner.prefix, @current_club.name, @current_member.visible_id), 
       method: :post, 
-      class: "btn btn-warning btn-large-w", 
+      class: "btn btn-warning #{large_button}", 
       id: "password_reset",
       confirm: 'Are you sure?' do %>
     <i class='icon-key'></i>
