--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -22,7 +22,7 @@
                 <table class="hidden_table_border">
                   <tr>
                     <td><%= t('activerecord.attributes.member.member_id') %></td>
-                    <td>  <%= text_field :member, :member_id, :class => 'test_field', 
+                    <td>  <%= text_field :member, :member_id, :class => 'test_field',   
                                      :value => (params[:member][:member_id] if params[:member])%>
                     </td>
                   </tr>
@@ -47,11 +47,11 @@
                   <tr>
                     <td><%= t('activerecord.attributes.member.phone_number') %></td>
                     <td>
-                      <%= text_field :member, :phone_country_code, :class => 'text_field input-mini',
+                      <%= text_field :member, :phone_country_code, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_country_code'),
                                      :value => (params[:member][:phone_country_code] if params[:member]) %> 
-                      <%= text_field :member, :phone_area_code, :class => 'text_field input-mini',
+                      <%= text_field :member, :phone_area_code, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_area_code'),
                                      :value => (params[:member][:phone_area_code] if params[:member]) %> 
-                      <%= text_field :member, :phone_local_number, :class => 'text_field input-mini',
+                      <%= text_field :member, :phone_local_number, :class => 'text_field input-mini', :placeholder => t('activerecord.attributes.member.phone_local_number'),
                                      :value => (params[:member][:phone_local_number] if params[:member]) %> 
                     </td>
                   </tr>
