--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -13,7 +13,7 @@
       <td>
         <div class="input-prepend input-append" style="float:left; width:25%">  
 	      <%= label :amount, t('activerecord.attributes.club_cash_transaction.amount'), :class=>"help-inline" %>
-	      <%= text_field nil, :amount, 
+	      <%= text_field :club_cash_transaction, :amount, 
             :value => (params[:club_cash_transaction][:amount] if params[:club_cash_transaction]) %>
       	</div>      
         </br></br></br>
@@ -23,7 +23,7 @@
     <tr> 
       <td> 
 	    <%= label :description, t('activerecord.attributes.club_cash_transaction.description') %>
-	    <%= text_area nil, :description, :style => 'width: 99%; height: 200px' %>
+	    <%= text_area :club_cash_transaction, :description, :style => 'width: 99%; height: 200px' %>
       </td>
     </tr>
     <tr>
