--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -64,7 +64,7 @@
       </div>
       <div class="span4">
         <% disable_cancel = @current_member.can_be_canceled? == false %>
-        <%= link_to("Cancel", (!disable_cancel ? member_cancel_path : "#"), :class => "btn  btn-large-w #{(disable_cancel ? "disabled" : "btn-danger")}", :disabled => (cannot? :cancel, Member) , :id => 'cancel') %>
+        <%= link_to("Cancel", (!disable_cancel ? member_cancel_path : "#"), :class => "btn  btn-large-w #{(disable_cancel ? "disabled" : "btn-danger")}", :disabled => (cannot? :cancel, Member or disable_cancel) , :id => 'cancel') %>
       </div>
       <div class="span4">&nbsp;</div>
     </div>  
