--- a/app/views/credit_cards/_form.html.erb
+++ b/app/views/credit_cards/_form.html.erb
@@ -5,9 +5,9 @@
       <%= f.text_field :number, :class => 'text_field input-medium'%> 
     <td> 
       <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
-      <%= f.text_field :expire_month, :class => 'text_field input-small'%>
+      <%= f.select :expire_month, @months, :class => 'text_field input-small', :include_blank => true  %>
       <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
-      <%= f.text_field :expire_year, :class => 'text_field input-small' %>
+      <%= f.select :expire_year, @years, :class => 'text_field input-small', :include_blank => true  %>
     </td>
   </tr>
   <tr class="control-group">
