ref#25607-moved error_messages from application.yml to locals/en. Also fixed tests.

--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -1,16 +1,19 @@
-
-
   <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field' %>
     </div>
   </div>
-
   <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :description, :cols => 60, :rows =>5, :class => 'text_area input-xxlarge' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :cs_phone_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :cs_phone_number, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
