--- a/app/views/shared/_fulfillment_actions.html.erb
+++ b/app/views/shared/_fulfillment_actions.html.erb
@@ -24,7 +24,7 @@
       <% end %>	
     <% else %>
       <% unless fulfillment.product.nil? %>
-        <p style = 'float:left;'> Actual stock: <%= fulfillment.product.stock %>. </p> &nbsp
+        <p style = 'float:left;'> Actual stock: <%= fulfillment.product.stock %>. </p> &nbsp;
         <% if fulfillment.product.stock > 0 %>
           <%= (link_to 'Resend','#', :id => 'resend', :name => fulfillment.id ,:class=> "btn btn-small") if can? :resend, Fulfillment %>
         <% end %>
