--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -21,22 +21,18 @@
   		</td>
   		<td>
         <%= label :status, t('activerecord.attributes.fulfillment.status'), :class => 'help-inline' %>
-        <%= select_tag :status, options_for_select([['not_processed', 'not_processed'],
-                                ['processing', 'processing'],['out_of_stock', 'out_of_stock'], 
-                                ['undeliverable','undeliverable'],['sent','sent']], :selected => params[:status]),
+        <%= select_tag :status, options_for_select(@possible_status, :selected => params[:status]),
                                 :class => 'select_field input-medium' %>	
       </td>
       <td>
         <%= label :product_type, t('activerecord.attributes.fulfillment.product_type'), :class => 'help-inline' %>
-        <%= select_tag :product_type, options_for_select([['Kit', 'KIT'], ['Card', 'CARD'],
-                                ['Others', 'OTHERS']], :selected => params[:product_type]),
+        <%= select_tag :product_type, options_for_select([['KIT-CARD'],['OTHERS']], :selected => params[:product_type]),
                                 :class => 'select_field input-medium' %>  
       </td>
   	</tr>
   	<tr>
   		<td colspan="5">
         <%= submit_tag t('buttons.report'), :class => 'btn btn-primary', :id => 'make_report' %>
-        <%= submit_tag t('buttons.create_xls_file'), :class => 'btn btn-primary', :id => 'create_xls_file' %>
       </td>
   	</tr>
   </table>
