when we change a fulfillment status, we should add an operation. not finished. we need others issues to test this. refs #25653

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -40,7 +40,9 @@
     			<td> <%= fulfillment.tracking_code %> </td>
     			<td> <%= fulfillment.status %> </td>
           <td> 
-            <%= check_box_tag "fulfillment_selected[#{fulfillment.id}]", fulfillment.id, false, :class => 'fulfillment_selected' %> 
+            <div id=<%= "div_fulfillment_selected_#{fulfillment.id}" %>>
+              <%= check_box_tag "fulfillment_selected[#{fulfillment.id}]", fulfillment.id, false, :class => 'fulfillment_selected' %> 
+            </div>
           </td>
     		</tr>
   		<% end %>
