--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Fulfillments</h1>
+    <h1>Fulfillments <%= link_to t('buttons.list_fulfillments_files'), list_fulfillment_files_path, :class => 'btn btn-primary' %></h1>
   </div>
 </section>
 
