--- a/app/views/credit_cards/_form.html.erb
+++ b/app/views/credit_cards/_form.html.erb
@@ -1,13 +1,13 @@
-<table class="table table-bordered" >
+<table class="control-group table table-bordered" >
   <tr>
     <td> 
-      <%= f.label :number, t('activerecord.credit_card')+' '+t('activerecord.attributes.credit_card.number'), :class => 'help-inline' %> 
+      <%= f.label :number, t('activerecord.credit_card')+' '+t('activerecord.attributes.credit_card.number'), :class => 'help-inline' %>  
       <%= f.text_field :number, :class => 'text_field input-medium'%> 
     <td> 
       <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
-      <%= f.select :expire_month, @months, :class => 'text_field input-small', :include_blank => true  %>
+      <%= f.select( :expire_month, @months,{:include_blank => true}, {:class => 'input-small'} ) %>
       <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
-      <%= f.select :expire_year, @years, :class => 'text_field input-small', :include_blank => true  %>
+      <%= f.select( :expire_year, @years,{:include_blank => true}, {:class => 'input-small'} ) %>
     </td>
   </tr>
   <tr class="control-group">
