--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,6 +22,10 @@
   <%= @product.stock %>
 </p>
 <p>
+  <strong><%= model_class.human_attribute_name(:allow_backorder) %>:</strong><br>
+  <%= @product.allow_backorder %>
+</p>
+<p>
   <strong><%= model_class.human_attribute_name(:weight) %>:</strong><br>
   <%= @product.weight %>
 </p>
