--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -1,41 +1,50 @@
-<section>
-  <div class="page-header">
-    <h1>Fulfillments <%= link_to t('buttons.list_fulfillments_files'), list_fulfillment_files_path, :class => 'btn btn-primary' %></h1>
-  </div>
-</section>
+<% if @file %>
+  <section>
+    <div class="page-header">
+      <h1>Fulfillments for file #<%= @file.id %></h1>
+    </div>
+  </section>
 
-<%= form_tag(fulfillments_index_path, :id => "fulfillment_report_form") do %>
-  <table class="table table-bordered" id ="fulfillments_table">
-  	<tr>
-      <td>
-        <%= label :all_times, t('all_times'), :class => 'help-inline' %>
-        <%= check_box_tag :all_times, 1, params[:all_times] %> 
-      </td>
-  		<td id="td_initial_date">
-	  		<%= label :initial_date, t('initial_date'), :class => 'help-inline' %>
-	  	  <%= text_field_tag :initial_date, params[:initial_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
-  		</td>
-  		<td id="td_end_date">
-	  		<%= label :end_date, t('end_date'), :class => 'help-inline' %>
-	  	  <%= text_field_tag :end_date, params[:end_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
-  		</td>
-  		<td>
-        <%= label :status, t('activerecord.attributes.fulfillment.status'), :class => 'help-inline' %>
-        <%= select_tag :status, options_for_select(@possible_status, :selected => params[:status]),
-                                :class => 'select_field input-medium' %>	
-      </td>
-      <td>
-        <%= label :product_type, t('activerecord.attributes.fulfillment.product_type'), :class => 'help-inline' %>
-        <%= select_tag :product_type, options_for_select([['KIT-CARD'],['OTHERS']], :selected => params[:product_type]),
-                                :class => 'select_field input-medium' %>  
-      </td>
-  	</tr>
-  	<tr>
-  		<td colspan="5">
-        <%= submit_tag t('buttons.report'), :class => 'btn btn-primary', :id => 'make_report' %>
-      </td>
-  	</tr>
-  </table>
+<% else %>
+  <section>
+    <div class="page-header">
+      <h1>Fulfillments</h1>
+    </div>
+  </section>
+
+  <%= form_tag(fulfillments_index_path, :id => "fulfillment_report_form") do %>
+    <table class="table table-bordered" id ="fulfillments_table">
+    	<tr>
+        <td>
+          <%= label :all_times, t('all_times'), :class => 'help-inline' %>
+          <%= check_box_tag :all_times, 1, params[:all_times] %> 
+        </td>
+    		<td id="td_initial_date">
+  	  		<%= label :initial_date, t('initial_date'), :class => 'help-inline' %>
+  	  	  <%= text_field_tag :initial_date, params[:initial_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
+    		</td>
+    		<td id="td_end_date">
+  	  		<%= label :end_date, t('end_date'), :class => 'help-inline' %>
+  	  	  <%= text_field_tag :end_date, params[:end_date], { :class => 'datepicker input-medium', :readonly => 'readonly' } %> 
+    		</td>
+    		<td>
+          <%= label :status, t('activerecord.attributes.fulfillment.status'), :class => 'help-inline' %>
+          <%= fulfillment_selectable_statuses(:status, params[:status]) %>
+        </td>
+        <td>
+          <%= label :product_type, t('activerecord.attributes.fulfillment.product_type'), :class => 'help-inline' %>
+          <%= select_tag :product_type, options_for_select([['KIT-CARD'],['OTHERS']], :selected => params[:product_type]),
+                                  :class => 'select_field input-medium' %>  
+        </td>
+    	</tr>
+    	<tr>
+    		<td colspan="5">
+          <%= submit_tag t('buttons.report'), :class => 'btn btn-primary', :id => 'make_report' %>
+        </td>
+    	</tr>
+    </table>
+  <% end %>
+
 <% end %>
 	
 <%= render :partial => "report_result" %>
