--- a/app/views/fulfillments/files.html.erb
+++ b/app/views/fulfillments/files.html.erb
@@ -8,6 +8,7 @@
   <thead>
     <tr>
       <th id="th_id"> <%= t('activerecord.attributes.fulfillment_files.id') %> </th>
+      <th> <%= t('activerecord.attributes.fulfillment_files.created_at') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.download') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.view') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment_files.status') %> </th>
